--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -27,7 +27,11 @@ menus:
   } }
   留言板: { path: /comment/, fa: fa-pencil-square-o faa-tada }
   友链: { path: /links/, fa: fa-link faa-shake }
-  赞赏: { path: /donate/, fa: fa-heart faa-pulse }
+  contact: { path: /, fa: fa-heart faa-pulse ,submenus:{
+    Gitee: { path: https://gitee.com/dummerchen, fa: iconfont icon-gitee2},
+    Github: { path: http://github.com/dummerchen, fa: iconfont icon-github},
+    cnblog: {path: https://www.cnblogs.com/cherrypill/,fa: iconfont icon-cnblogs},
+  } }
   关于: { path: /, fa: fa-leaf faa-wrench , submenus: { 
     我: {path: /about/, fa: fa-meetup}, 
     主题: {path: /theme-sakura/, fa: iconfont icon-sakura },
