--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,29 @@
-name: GitHub Actions Build and Deploy
+name: Compile and Deploy to GitHub Page
 on:
   push:
     branches:
-
       - backup
-
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-18.04
     steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+        ref: refs/heads/source
 
-    - name: 1. git checkout...
+    - uses: actions/setup-node@v1
+      with:
+        node_version: '8.x'
 
-      uses: actions/checkout@v1
-
-    - name: 2. setup nodejs...
-
-      uses: actions/setup-node@v1
-
-    - name: 3. install hexo...
-
-      run: |
-        npm install hexo-cli -g
-        npm i -S hexo-prism-plugin -g
-        npm install hexo-generator-search --save -g
-        npm i hexo-permalink-pinyin  -g
-        npm i --save hexo-wordcount -g
-        npm install hexo-filter-github-emojis  -g
-        npm install hexo-generator-feed  -g
-        npm install
-    - name: 4. hexo generate public files...
-
-      run: |
-        hexo clean
-        hexo g
-    
-    # 提交到我们的存放静态资源的仓库
-
-    - name: Build and Deploy
-
-      uses: y4code/hexo-deploy-action@master
+    - name: Setup Git user info and env
       env:
-        PERSONAL_TOKEN: ${{ secrets.myssh }}
-        PUBLISH_REPOSITORY: dummerchen/dummerchen.github.io # The repository the action should deploy to.
-        BRANCH: master  # The branch the action should deploy to.
-        PUBLISH_DIR: ./public # The folder the action should deploy.
+        M_GITHUB_PAGES_TOKEN: ${{ secrets.ACTION_DEPLOY_KEY }}
+      run: |
+        git config --global user.email "1179502349@qq.com"
+        git config --global user.name "dummerchen"
+        sed -i "s/ACTION_DEPLOY_KEY/$ACTION_DEPLOY_KEY/g" ./_config.yml
+    - name: Install dependencies
+      run: npm ci
+    - name: Compile and deploy blog
+      run: hexo clean && hexo g && hexo d
