--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,23 +7,24 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
       with:
         submodules: true
-        ref: refs/heads/source
 
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@master
       with:
-        node_version: '8.x'
-
-    - name: Setup Git user info and env
-      env:
-        M_GITHUB_PAGES_TOKEN: ${{ secrets.ACTION_DEPLOY_KEY }}
+        node_version: '12.x'
+    - name: Installation
       run: |
-        git config --global user.email "1179502349@qq.com"
-        git config --global user.name "dummerchen"
-        sed -i "s/ACTION_DEPLOY_KEY/$ACTION_DEPLOY_KEY/g" ./_config.yml
-    - name: Install dependencies
-      run: npm ci
+        npm install
+        npm install -g hexo-cli    
+    
+    - name: Generate
+      run: hexo clean && hexo g
+      
     - name: Compile and deploy blog
-      run: hexo clean && hexo g && hexo d
+      uses: peaceiris/actions-gh-pages@v3
+      with: 
+        github_token: ${{ secrets.ACTION_DEPLOY_KEY }}
+        publish_dir: ./public
+        cname: dummerfu.tk
