--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,12 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
+    - uses: actions/checkout@v1
 
-    - uses: actions/setup-node@master
+    - uses: actions/setup-node@v1
       with:
         node_version: '12.x'
+    
     - name: Installation
       run: |
         npm install
