--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,4 @@ jobs:
         npm install -g hexo-cli    
     
     - name: Generate
-      run: hexo clean && hexo g
-      
-    - name: Compile and deploy blog
-      uses: peaceiris/actions-gh-pages@v3
-      with: 
-        github_token: ${{ secrets.ACTION_DEPLOY_KEY }}
-        publish_dir: ./public
-        cname: dummerfu.tk
+      run: hexo clean && hexo g && hexo d
