--- a/_config.yml
+++ b/_config.yml
@@ -32,14 +32,17 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ''
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
 highlight: 
-  enable: true
+  enable: false
   line_number: false
   auto_detect: false
   tab_replace:
