--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-generator-json-content": "^2.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.2",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^0.3.3",
