--- a/_config.yml
+++ b/_config.yml
@@ -42,11 +42,22 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight: 
-  enable: false
+  enable: true
   line_number: false
   auto_detect: false
   tab_replace:
+
+prismjs:
+  enable: false
+  preprocess: true
+  line_number: false
   
+prism_plugin:
+  enable: false
+  mode: 'preprocess'    # realtime/preprocess 
+  theme: 'default'
+  line_number: false    # default false 
+  custom_css: 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
