--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight: 
-  enable: true
+  enable: false
   line_number: false
   auto_detect: false
   tab_replace:
@@ -51,13 +51,12 @@ prismjs:
   enable: false
   preprocess: true
   line_number: false
-  
+# 加了必须开enable没用
 prism_plugin:
-  enable: false
   mode: 'preprocess'    # realtime/preprocess 
-  theme: 'default'
+  theme: 'tomorrow'
   line_number: false    # default false 
-  custom_css: 
+  custom_css: '\themes\css\prism-vsc-dark-plus.css'
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
