--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -32,9 +32,9 @@ menus:
     Github: { path: http://github.com/dummerchen, fa: iconfont icon-github},
     cnblog: {path: https://www.cnblogs.com/cherrypill/,fa: iconfont icon-cnblogs},
   } }
-  关于: { path: /, fa: fa-leaf faa-wrench , submenus: { 
-    我: {path: /about/, fa: fa-meetup}, 
-    主题: {path: /theme-sakura/, fa: iconfont icon-sakura },
+  其他: { path: /, fa: fa-leaf faa-wrench , submenus: { 
+    关于我: {path: /about/, fa: fa-meetup}, 
+    大事件薄: {path: /things/, fa: iconfont icon-sakura },
   } }
 
 
@@ -68,6 +68,8 @@ bg:
   - https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119193802.png
   - https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119193902.jpg
   - https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201119192304.jpg
+  - https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220151214.jpg
+  - https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201220152038.jpg
 
 # 背景图片样式 空 原图效果 filter-dim 阴影 filter-grid 横条 filter-dot 点点
 bgclass: 
