--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "hexo-blog-encrypt": "^3.0.15",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^0.1.5",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^2.2.0",
+    "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.2",
     "hexo-prism-plugin": "^2.3.0",
