修改鼠标样式

--- a/_config.yml
+++ b/_config.yml
@@ -112,3 +112,18 @@ feed:
   content_limit: 140
   content_limit_delim: ' '
   order_by: -date
+
+lazyload: 
+enable: true # 是否开启图片懒加载 
+onlypost: false # 是否只对文章的图片做懒加载 
+loadingImg: medias/loading.gif
+
+# 百度定时提交
+# baidu_url_submit:
+#   count: 1000 ## 提交最新的一个链接
+#   host: alili.tech ## 在百度站长平台中注册的域名
+#   token: xxxxx ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+#   path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
+#   xz_appid: 'xxxxxx' ## 你的熊掌号 appid
+#   xz_token: 'xxxxxx' ## 你的熊掌号 token
+#   xz_count: 10 ## 从所有的提交的数据当中选取最新的10条,该数量跟你的熊掌号而定
