--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^5.3.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-blog-encrypt": "^3.0.15",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^0.1.5",
