初步修改完valine

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -137,3 +137,7 @@ aplayer:
 valine: true
 v_appId: qXq4yrRs0Td8eIpiWXos75dh-gzGzoHsz
 v_appKey: QIjahFDUKODgy2LVaXXK1ho2
+v_enableQQ: true
+v_pageSize: 10
+v_placeholder: '📌昵称可以填写QQ号来自动补全QQ信息啦~\n🚀评论和回复支持M↓~"'
+# v_avatar: monsterid 
