--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.2",
     "hexo-lazyload-image": "^1.0.9",
+    "hexo-neat": "^1.0.9",
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-kramed": "^0.1.4",
