--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -18,8 +18,9 @@ menus:
   首页: { path: /, fa: fa-fort-awesome faa-shake }
   归档: { path: /archives, fa: fa-archive faa-shake, submenus: { 
     技术: {path: /categories/技术/, fa: fa-code }, 
-    随笔: {path: /categories/生活/, fa: fa-file-text-o }, 
-    转载: {path: /categories/转载/, fa: fa-book }
+    随笔: {path: /categories/随笔/, fa: fa-file-text-o }, 
+    # 转载: {path: /categories/转载/, fa: fa-book },
+    标签: {path: /tags, fa: fa-tags}
   } }
   # 清单: { path: javascript:;, fa: fa-list-ul faa-vertical, submenus: { 
   #   图集: {path: /tags/图集/, fa: fa-photo }
@@ -34,7 +35,6 @@ menus:
   其他: { path: /, fa: fa-leaf faa-wrench , submenus: { 
     关于我: {path: /about/, fa: fa-meetup}, 
     说说: {path: /shuoshuo/, fa: fa-commenting-o fa-commenting},
-    # 大事件薄: {path: /things/, fa: iconfont icon-sakura },
   } }
 
 
