--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -11,7 +11,7 @@ pjax: 1
 # 1开启
 mathjax: 1
 
-notice: false
+notice: '本博客由:https://www.cnblogs.com/cherrypill/迁移'
 lazyloadImg: https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/loader/orange.progress-bar-stripe-loader.svg
 
 menus:
