--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -81,7 +81,7 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/boxun.png
+favicon: /img/favicon.png
 
 # Avatar (頭像)
 avatar:
@@ -128,16 +128,18 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/1.png
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/2.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/3.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/4.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/5.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/6.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/7.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/8.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/9.jpg
-    - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/10.png
+    - /img/404.jpg
+    - 
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/1.png
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/2.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/3.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/4.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/5.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/6.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/7.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/8.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/9.jpg
+    # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/10.png
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
@@ -146,9 +148,9 @@ error_img:
 
 # A simple 404 page
 error_404:
-  enable: false
+  enable: true
   subtitle: 'Page Not Found'
-  background: https://i.loli.net/2020/05/19/aKOcLiyPl2JQdFD.png
+  background: /img/404.jpg
 
 post_meta:
   page: # Home Page
@@ -277,7 +279,7 @@ comments:
   text: true # Display the comment name next to the button
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
-  lazyload: false
+  lazyload: true
   count: false # Display comment count in post's top_img
   card_post_count: false # Display comment count in Home Page
 
@@ -697,7 +699,7 @@ aside:
     expand: none # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
   card_tags:
-    enable: true
+    enable: false
     limit: 40 # if set 0 will show all
     color: false
     sort_order: # Don't modify the setting unless you know how it works
@@ -731,13 +733,13 @@ runtimeshow:
 newest_comments:
   enable: true
   sort_order: # Don't modify the setting unless you know how it works
-  limit: 6
+  limit: 5
   storage: 10 # unit: mins, save data to localStorage
   avatar: true
   # You can only choose one, or neither
   valine: false
   github_issues:
-    enable: true
+    enable: false
     repo:
   disqus:
     enable: false
@@ -944,8 +946,8 @@ pangu:
 # https://github.com/verlok/lazyload
 lazyload:
   enable: true
-  post: /img/loading.gif
-  # post: /img/friend_404.gif
+  # post: /img/loading.gif
+  post: /img/friend_404.gif
 # PWA
 # See https://github.com/JLHwung/hexo-offline
 # ---------------
@@ -972,6 +974,8 @@ inject:
   head:
     # - <link rel="stylesheet" href="/xxx.css">
     #动画标签anima的依赖
+    # 
+    - <link rel="stylesheet" href="/css/card_list.css"> >
     - <script src='https://cdn.jsdelivr.net/npm/butterfly-friend@1.0.4/dist/friend.min.js'></script>
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/l-lin/font-awesome-animation/dist/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
   bottom:
@@ -1138,7 +1142,7 @@ categoryBar:
   descr:
     - 魔改教程
   cover:
-    - url('https://cdn.jsdelivr.net/gh/Akilarlxh/Akilarlxh.github.io@v3.3.3_2/img/cover1.webp')
+    - url('https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115957.jpg')
     - url('https://gitee.com/dummerchen/MY_IMAGE_BED/raw/master/20201115205545.jpg')
     - url('https://raw.githubusercontent.com/dummerchen/My_Image_Bed01/master/img/20201119190225.jpg')
     - url('https://gitee.com/dummerchen/MY_IMAGE_BED/raw/master/20201103130311.png')
@@ -1161,4 +1165,4 @@ gitcalendar:
 
 # 首页置顶轮播图
 sliderbar:
-  enable: true
+  enable: false
