--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -13,7 +13,8 @@ menu:
   # 分类: /categories/ || fas fa-folder-open
   留言: /comment/ || fa fa-comments
   友链: /links/ || fas fa-link
-  说说: /shuoshuo/ 
+  说说: /shuoshuo/ || icon-message
+  # icon-entypocomment
 # Hide the child menu items in mobile sidebar
 hide_sidebar_menu_child: false
 
@@ -128,7 +129,7 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    - /img/404.jpg
+    - /img/lazyload.svg
     - 
     # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/1.png
     # - https://cdn.jsdelivr.net/gh/dummerchen/cdn@master/img/cover/2.jpg
@@ -192,8 +193,12 @@ toc:
   style_simple: false
 
 post_copyright:
+  # 默认copyright
   enable: false
   decode: false
+  # 自己设定的copyright
+  enable_mycopyright: true
+
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
 
@@ -510,7 +515,10 @@ theme_color:
   paginator: "#00c4b6"
   button_hover: "#ff7242c2"
   text_selection: "#1c1c1c8c"
-  link_color: "#99a9bf"
+  # 超链接紫色#807dd4
+  link_color: "#807dd4" 
+  # hover 黄色
+  link_color_hover: "#e67474"
   meta_color: "#858585"
   hr_color: "#A4D8FA"
   code_foreground: "#F47466"
@@ -873,38 +881,6 @@ artitalk:
       '2233_15': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_耶].png',
       '2233_16': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/[2233娘_郁闷].png',
     
-      'hotkey1': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/1.jpg',
-      'hotkey2': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/10.jpg',
-      'hotkey3': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/11.jpg',
-      'hotkey4': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/12.jpg',
-      'hotkey5': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/13.jpg',
-      'hotkey6': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/14.jpg',
-      'hotkey7': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/15.jpg',
-      'hotkey8': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/16.jpg',
-      'hotkey9': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/17.jpg',
-      'hotkey10': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/18.jpg',
-      'hotkey11': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/19.jpg',
-      'hotkey12': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/2.jpg',
-      'hotkey13': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/20.jpg',
-      'hotkey14': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/21.jpg',
-      'hotkey15': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/22.jpg',
-      'hotkey16': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/23.jpg',
-      'hotkey17': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/24.jpg',
-      'hotkey18': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/25.jpg',
-      'hotkey19': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/26.jpg',
-      'hotkey20': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/27.jpg',
-      'hotkey21': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/28.jpg',
-      'hotkey22': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/29.jpg',
-      'hotkey23': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/3.jpg',
-      'hotkey24': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/30.jpg',
-      'hotkey25': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/31.jpg',
-      'hotkey26': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/32.jpg',
-      'hotkey27': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/4.jpg',
-      'hotkey28': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/5.jpg',
-      'hotkey29': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/6.jpg',
-      'hotkey30': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/7.jpg',
-      'hotkey31': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/8.jpg',
-      'hotkey32': 'https://cdn.jsdelivr.net/gh/GamerNoTitle/Picture-repo-v1@master/img/BQB/9.jpg',
     }
 
 
@@ -947,7 +923,7 @@ pangu:
 lazyload:
   enable: true
   # post: /img/loading.gif
-  post: /img/friend_404.gif
+  post: /img/lazyload.svg
 # PWA
 # See https://github.com/JLHwung/hexo-offline
 # ---------------
@@ -975,9 +951,10 @@ inject:
     # - <link rel="stylesheet" href="/xxx.css">
     #动画标签anima的依赖
     # 
-    - <link rel="stylesheet" href="/css/card_list.css"> >
+    - <link rel="stylesheet" href="/css/mycss.css"> >
     - <script src='https://cdn.jsdelivr.net/npm/butterfly-friend@1.0.4/dist/friend.min.js'></script>
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/l-lin/font-awesome-animation/dist/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
+    - <link rel="stylesheet" href="https://at.alicdn.com/t/font_2134734_qu549vixs5f.css?spm=a313x.7781069.1998910419.60&file=font_2134734_qu549vixs5f.css" medis="defer" onload="this.media='all'">
   bottom:
     # - <script src="xxxx"></script>
     # 看板娘
@@ -1140,11 +1117,14 @@ categoryBar:
   column: odd # 显示列数,odd：3列 | even：4列
   row: 1 #显示行数，默认两行，超过行数切换为滚动显示
   descr:
-    - 魔改教程
+    - maybe 算技术？
+    - 不知道改怎么分类
+    - 大佬文章
+    - 反正没人看
   cover:
-    - url('https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20210105115957.jpg')
+    - url('https://gitee.com/dummerchen/MY_IMAGE_BED/raw/master/20201101194638.jpg')
     - url('https://gitee.com/dummerchen/MY_IMAGE_BED/raw/master/20201115205545.jpg')
-    - url('https://raw.githubusercontent.com/dummerchen/My_Image_Bed01/master/img/20201119190225.jpg')
+    - url('https://raw.githubusercontent.com/dummerchen/My_Image_Bed01/master/img/20201119193802.png')
     - url('https://gitee.com/dummerchen/MY_IMAGE_BED/raw/master/20201103130311.png')
 # gitcalendar
 #gitcalendar
