--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^2.2.0",
+    "hexo-generator-search": "^2.4.3",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.2",
